# python-notebook-package

./: .flake8  .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: main.yml  release.yml
doc/: api.rst  conf.py  index.rst  pnp_fib.rst  usage.rst
notebooks/: demo.ipynb  demo.py
src/pnp/: __init__.py  __version__.py  fib.py  fibonacci.py
tests/: test_fibonacci.py
