[metadata]
name = pnp
version = attr: spacemed._version.__version__
author = Magnus Hagdorn
author_email = magnus.hagdorn@charite.de
url = https://github.com/mhagdorn/python-notebook-package
description = Python notebook and package demonstration
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
package_dir =
    =src
packages = pnp
zip_safe = True
include_package_data = True
install_requires =
    pandas
    scipy

[options.extras_require]
lint = flake8 >= 3.5.0
docs =
    sphinx
    sphinx_rtd_theme
    sphinx-argparse
    myst-parser

[options.entry_points]
console_scripts =
    pnp_fib = pnp.fib:main

[build_sphinx]
project = Python Notebook and Package Demonstration
source-dir = doc
